NodesFromRect doesn't work on SVG root elements. https://bugs.webkit.org/show_bug.cgi?id=89990

Reviewed by Antonio Gomes.

Source/WebCore:

Adds support for rect-based hit-testing on the SVG root element.
This means that while rect-based hit-testing is still not supported
within SVG elements, that at least it works on SVG root elements as
it would on any other replaced element.

Test: fast/dom/nodesFromRect-svg.html

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::nodeAtPoint):

LayoutTests:

Test nodesFromRect on SVG root elements.

* fast/dom/nodesFromRect-svg-expected.txt: Added.
* fast/dom/nodesFromRect-svg.html: Added.


Canonical link: https://commits.webkit.org/108815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122339 268f45cc-cd09-0410-ab3c-d52691b4dbfc